# Ajax

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ablation_study.py  compute_time.py  gpu_launcher.py  hyperparam_search.py  mc_pretrain_collect.py  noisy_expert_study.py  parse_tensorboard_to_csv.py  partial_expert_study.py  partial_expert_train.py  plane_exp.py  plane_exps.py  plot_sweep.py  pyproject.toml  sac_hyperparam_search.py  sweep_launcher.py  sweep_params.json  target_sac_hyperparam_search.py  wandb_sweep.py
.github/workflows/: ci.yml
hyperparams/: ajax_apo.yml  ajax_ppo.yml  ajax_sac.yml  ppo.yml
src/ajax/: __init__.py  checkpoint.py  distillation.py  early_termination_wrapper.py  evaluate.py  log.py  schedule.py  stable_utils.py  state.py  types.py  utils.py  wrappers.py
src/ajax/agents/: __init__.py  base.py  cloning.py  obs_norm.py  pre_train.py
src/ajax/agents/APO/: APO.py  state.py  train_APO.py  utils.py
src/ajax/agents/ASAC/: ASAC.py  state.py  train_ASAC.py  utils.py
src/ajax/agents/AVG/: AVG.py  state.py  train_AVG.py  utils.py
src/ajax/agents/DynaSAC/: dyna_SAC.py  dyna_SAC_multi.py  state.py  train_dyna_sac.py  train_dyna_sac_multi.py
src/ajax/agents/PPO/: PPO.py  PPO_pre_train.py  state.py  train_PPO.py  train_PPO_pre_train.py  utils.py
src/ajax/agents/REDQ/: REDQ.py  state.py  train_REDQ.py
src/ajax/agents/SAC/: SAC.py  core.py  exploration.py  old_train_SAC.py  state.py  train_SAC.py  utils.py
src/ajax/agents/SafeSAC/: SafeSAC.py  (+1 more)
src/ajax/buffers/: utils.py
src/ajax/environments/: create.py  interaction.py  utils.py
src/ajax/logging/: wandb_logging.py
src/ajax/modules/: __init__.py  expert.py  exploration.py  pid_actor.py  pretrain.py
src/ajax/networks/: networks.py  scanned_rnn.py  utils.py
src/ajax/plane/: plane_exps_utils.py
sweep/: create_study.py  long_run.py  search.py  sweep.py  train.py  utils.py  worker.py
sweep/ASAC/: best_n_configs.json
sweep/PPO/: best_config.json  best_n_configs.json  best_trials.csv
sweep/SAC/: best_n_configs.json  final_results.json
sweep/configs/: PPO.yml
sweep/configs/ASAC/: ASAC.yaml
sweep/configs/PPO/: PPO.yaml
sweep/configs/SAC/: SAC.yaml
tests/: test_checkpoint.py  test_double_train_state.py  test_evaluate.py  test_schedule.py  test_utils.py
tests/agents/: test_probing.py
tests/agents/APO/: test_APO.py  test_APO_utils.py  test_train_APO.py
tests/agents/ASAC/: test_ASAC.py  test_ASAC_utils.py  test_train_ASAC.py
tests/agents/AVG/: test_AVG.py  test_AVG_utils.py  test_distillation.py  test_train_AVG.py
tests/agents/PPO/: test_PPO.py  test_ppo_utils.py  test_train_PPO.py  test_train_PPO_pre_train.py
tests/agents/REDQ/: test_REDQ.py  test_redq_subset.py  test_train_REDQ.py
tests/agents/TD3/: test_TD3.py  test_td3_target.py
tests/agents/sac/: test_sac.py  test_sac_utils.py  test_train_sac.py
tests/buffers/: test_buffers_utils.py
tests/environments/: test_create.py  test_environment_utils.py  test_expert_policy.py  test_interaction.py  test_rolling_mean.py  test_sac_trains_on_playground.py  test_wrappers.py
tests/logging/: test_wandb_logging.py
tests/modules/: test_expert.py  test_exploration.py  test_hook_composition.py  test_pid_actor.py  test_pretrain.py
tests/networks/: test_network_utils.py  test_networks.py
(+8 files in other folders)
